--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "bootstrap": "^5.3.0",
-    "eslint-plugin-jest": "^27.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "timers-browserify": "^2.0.12",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -28,8 +26,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -46,6 +43,11 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
+    "eslint": "^8.45.0",
+    "eslint-plugin-jest": "^27.2.3",
+    "typescript": "^5.1.6",
     "webpack-cli": "^5.1.4"
   }
 }
