--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "bootstrap": "^5.3.0",
+    "rc-tween-one": "^3.0.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
@@ -47,7 +48,7 @@
     "@typescript-eslint/parser": "^6.1.0",
     "eslint": "^8.45.0",
     "eslint-plugin-jest": "^27.2.3",
-    "typescript": "^5.1.6",
+    "typescript": "^4.9.5",
     "webpack-cli": "^5.1.4"
   }
 }
